@@ -16,14 +16,14 @@ version
 </h1>
 <h2>Options Documentation</h2>
 
-<p>Copyright 2002-2008 by Bill Kendrick and others<br>
+<p>Copyright 2002-2009 by Bill Kendrick and others<br>
 New Breed Software</p>
 
 <p><a href="mailto:bill@newbreedsoftware.com">bill@newbreedsoftware.com</a><br>
 <a href="http://www.tuxpaint.org/">http://www.tuxpaint.org/</a></p>
 
 
-<p>December 13, 2008</p>
+<p>January 23, 2009</p>
 
 
 </center>
@@ -1038,9 +1038,9 @@ New Breed Software</p>
       <td>&nbsp;</td>
     </tr>
     <tr>
-      <td><code>zapoteco</code></td>
+      <td><code>miahuatlan-zapotec</code></td>
       <td>&nbsp;</td>
-      <td>&nbsp;</td>
+      <td><code>zapotec</code></td>
     </tr>
     </table>
     </blockquote>
@@ -1769,9 +1769,9 @@ New Breed Software</p>
     <td>&nbsp;</td>
   </tr>
   <tr>
-    <td><code>zw_MX</code></td>
+    <td><code>zam</code></td>
     <td>&nbsp;</td>
-    <td>Zapoteco</td>
+    <td>Zapotec (Miahuatlan)</td>
     <td>&nbsp;</td>
   </tr>
   </table>
